[FIX] web: fix the scrollbar in mobile view
Steps to reproduce:
-Go to the Mobile view and install the project.
-Then go to the project and create a new one.
-Create new task stages and at least tasks for the project.
-Then click on convert to task/subtask.
-In kanban view, the scrollbar does not go all the way to the bottom when
 clicking on the 'parent task' field.

Issue:
-When there are fewer records in view, the scrollbar should move to the bottom

Cause:
-Overflow has two properties x (horizontally) and y (vertically). Scroll
 property is set for x, which is why scroll bar doesn't go all the way down.

Fix:
-After this commit, the visible property will be set for the x and y so that
 when fever records are displayed, the scroll bar will appear at the bottom.

task-3681318

--- a/addons/web/static/src/views/kanban/kanban_controller.scss
+++ b/addons/web/static/src/views/kanban/kanban_controller.scss
@@ -487,7 +487,7 @@
 
             min-height: initial;
             height: 100%;
-            overflow: scroll hidden !important;
+            overflow: visible !important;
             scroll-snap-type: x mandatory;
         }
 
